@@ -6,9 +6,20 @@ copyright_year   = 2014
 version          = 0.09
 
 [@Author::Plicease]
+:version      = 1.98
+travis_status = 1
 release_tests = 1
-installer     = ModuleBuild
-diag          = +Alien::gmake
+installer     = Alien
+irc           = irc://irc.perl.org/#native
+
+alien_name            = nasm
+alien_stage_install   = 1
+alien_build_command   = %c --prefix=%s
+alien_build_command   = %{gmake}
+alien_install_command = %{gmake} install
+alien_repo            = http://www.nasm.us/pub/nasm/releasebuilds/2.11.08/
+alien_exact_filename  = nasm-2.11.08.tar.gz
+alien_bin_requires    = Alien::gmake = 0.11
 
 [RemovePrereqs]
 remove = strict
@@ -18,11 +29,9 @@ remove = Env
 remove = File::Spec
 
 [Prereqs]
-Alien::Base = 0.020
 Capture::Tiny = 0
 
 [Prereqs / ConfigureRequires]
-Alien::Base::ModuleBuild   = 0.020
 Capture::Tiny = 0
 
 [Author::Plicease::Upload]
